<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/userConfig"
        android:fontFamily="@font/krub_regular"
        android:title="@string/userConfig" />
    <item
        android:id="@+id/addGroup"
        android:fontFamily="@font/krub_regular"
        android:title="@string/btnAddGroup" />
    <item
        android:id="@+id/allGroups"
        android:fontFamily="@font/krub_regular"
        android:title="@string/allGroups" />
    <item
        android:id="@+id/myGroups"
        android:fontFamily="@font/krub_regular"
        android:title="@string/myGroups" />
    <item
        android:id="@+id/logout"
        android:fontFamily="@font/krub_regular"
        android:title="@string/logout" />
</menu>